{{$NEXT}}
    new public apply_properties method on projects
0.204     2011-03-24 16:16:11 America/New_York
    add some spiffy delegates and attributes for targets
0.203     2011-03-24 15:00:31 America/New_York
    turn targets into a hashref of objects so we can query their contents
0.202     2011-03-23 14:58:44 America/New_York
    require XML::Rabbit 0.0.4 explicitly so the FileList module will compile
0.201     2011-03-22 21:44:49 America/New_York
    remove dependency test on ant executable
0.200     2011-03-22 13:57:16 America/New_York
    extract from internal GSI project