@@ -1,5 +1,6 @@
 {{$NEXT}}
     new public apply_properties method on projects
+    property substution is recursive
 0.204     2011-03-24 16:16:11 America/New_York
     add some spiffy delegates and attributes for targets
 0.203     2011-03-24 15:00:31 America/New_York
